website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.0.1/api/plugins/plugin-ideal-image.mdx
---
sidebar_position: 8
slug: /api/plugins/@docusaurus/plugin-ideal-image
---

# 📦 plugin-ideal-image

import APITable from '@site/src/components/APITable';

Docusaurus 插件，用於生成近乎理想的圖片（響應式、懶加載和低質量佔位圖）。

:::info

預設情況下，該插件在開發環境中處於**非活動狀態**，以便您始終可以查看全尺寸圖片。如果您想調試理想圖片行為，可以將 [`disableInDev`](#disableInDev) 選項設置為 `false`。

:::

## 安裝 {#installation}

```bash npm2yarn
npm install --save @docusaurus/plugin-ideal-image
```

## 使用方法 {#usage}

該插件僅支援 PNG 和 JPG 格式。

```jsx
import Image from '@theme/IdealImage';
import thumbnail from './path/to/img.png';

// your React code
<Image img={thumbnail} />

// or
<Image img={require('./path/to/img.png')} />
```

:::warning

此插件註冊了一個 [Webpack loader](https://webpack.js.org/loaders/)，會改變導入/require 圖片的類型：

- 之前：`string`
- 之後：`{preSrc: string, src: import("@theme/IdealImage").SrcImage}`

:::

## 配置 {#configuration}

可接受的字段：

```mdx-code-block
<APITable>
```

| Option | Type | Default | Description |
| --- | --- | --- | --- |
| `name` | `string` | `ideal-img/[name].[hash:hex:7].[width].[ext]` | Filename template for output files. |
| `sizes` | `number[]` | _original size_ | Specify all widths you want to use. If a specified size exceeds the original image's width, the latter will be used (i.e. images won't be scaled up). |
| `size` | `number` | _original size_ | Specify one width you want to use; if the specified size exceeds the original image's width, the latter will be used (i.e. images won't be scaled up) |
| `min` | `number` |  | As an alternative to manually specifying `sizes`, you can specify `min`, `max` and `steps`, and the sizes will be generated for you. |
| `max` | `number` |  | See `min` above |
| `steps` | `number` | `4` | Configure the number of images generated between `min` and `max` (inclusive) |
| `quality` | `number` | `85` | JPEG compression quality |
| `disableInDev` | `boolean` | `true` | You can test ideal image behavior in dev mode by setting this to `false`. **Tip**: use [network throttling](https://www.browserstack.com/guide/how-to-perform-network-throttling-in-chrome) in your browser to simulate slow networks. |

```mdx-code-block
</APITable>
```

### 示例配置 {#ex-config}

以下是一個示例配置：

```js title="docusaurus.config.js"
export default {
  plugins: [
    [
      '@docusaurus/plugin-ideal-image',
      // highlight-start
      {
        quality: 70,
        max: 1030, // max resized image's size.
        min: 640, // min resized image's size. if original is lower, use that size.
        steps: 2, // the max number of images generated between min and max (inclusive)
        disableInDev: false,
      },
      // highlight-end
    ],
  ],
};
```